removed custom testing settings

--- a/drivers/synology/pair/start.html
+++ b/drivers/synology/pair/start.html
@@ -64,12 +64,12 @@ function saveSettings () {
 
 		<table class="pairSettings">
 			<tr>
-				<td style="width:100px;" data-i18n="pair.start.hostname">Hostname</td>
-				<td><input id="hostname" type="text" value="62.195.36.13" placeholder="mysynology.quickconnect.to"/></td>
+				<td style="width:100px;" data-i18n="pair.start.hostname">IP Address</td>
+				<td><input id="hostname" type="text" value="" placeholder="192.168.1.123"/></td>
 			</tr>
 			<tr>
 				<td style="width:100px;" data-i18n="pair.start.username">Username</td>
-				<td><input id="username" type="text" value="surveillance" placeholder="admin"/></td>
+				<td><input id="username" type="text" value="" placeholder="admin"/></td>
 			</tr>
 			<tr>
 				<td style="width:100px;" data-i18n="pair.start.password">Password</td>
