--- a/drivers/synology/pair/start.html
+++ b/drivers/synology/pair/start.html
@@ -77,7 +77,7 @@ function saveSettings () {
 			</tr>
 			<tr>
 				<td style="width:100px;" data-i18n="pair.start.password">Password</td>
-				<td><input id="password" type="password" value="=" placeholder=""/></td>
+				<td><input id="password" type="password" value="" placeholder=""/></td>
 			</tr>
 		</table>
 
